--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Setup Chrome
+        uses: browser-actions/setup-chrome@latest
+
       - name: Run scraper
         run: python scraper/scrape_boletin.py
 
