--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -28,6 +28,11 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Install Tesseract OCR
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tesseract-ocr tesseract-ocr-spa poppler-utils
+
       - name: Setup Chrome
         uses: browser-actions/setup-chrome@latest
 
