--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ beautifulsoup4>=4.11.0
 gradio_client>=0.11.0
 selenium>=4.15.0
 webdriver-manager>=4.0.0
+pypdf>=3.0.0
+pytesseract>=0.3.10
+pdf2image>=1.16.0
+Pillow>=10.0.0
